; ModuleID = '/home/carl/AnghaBench/esp-idf/components/wpa_supplicant/src/esp_supplicant/extr_esp_wpa2.c_esp_wifi_sta_wpa2_ent_disable_fn.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/wpa_supplicant/src/esp_supplicant/extr_esp_wpa2.c_esp_wifi_sta_wpa2_ent_disable_fn.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MSG_INFO = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [39 x i8] c"WPA2 ENTERPRISE VERSION: [%s] disable\0A\00", align 1
@WPA2_VERSION = common dso_local global i32 0, align 4
@gEapSm = common dso_local global i64 0, align 8
@ESP_OK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @esp_wifi_sta_wpa2_ent_disable_fn(i8* %0) #0 {
  %2 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  %3 = load i32, i32* @MSG_INFO, align 4
  %4 = load i32, i32* @WPA2_VERSION, align 4
  %5 = call i32 @wpa_printf(i32 %3, i8* getelementptr inbounds ([39 x i8], [39 x i8]* @.str, i64 0, i64 0), i32 %4)
  %6 = call i32 (...) @esp_wifi_unregister_wpa2_cb_internal()
  %7 = load i64, i64* @gEapSm, align 8
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %11

9:                                                ; preds = %1
  %10 = call i32 (...) @eap_peer_sm_deinit()
  br label %11

11:                                               ; preds = %9, %1
  %12 = load i32, i32* @ESP_OK, align 4
  ret i32 %12
}

declare dso_local i32 @wpa_printf(i32, i8*, i32) #1

declare dso_local i32 @esp_wifi_unregister_wpa2_cb_internal(...) #1

declare dso_local i32 @eap_peer_sm_deinit(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
